Add JavaScript tag for app.js in index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </div>
 
   <footer class="footer">© 2025 Task Manager | Built by Meena Setua</footer>
+  <!-- javaScript tag srarted-->
 
   <script src="app.js"></script>
   <script>
